# Observe

./: .travis.yml  CMakeLists.txt  README.md  events.h  example.cpp
cmake/: LarsEventConfig.cmake.in
examples/: CMakeLists.txt  gui_events.cpp  mouse_events.cpp  observable_value.cpp
include/lars/: event.h  observable_value.h  thread_safe_event.h
include/observe/: event.h  observer.h
test/source/: event.cpp
tests/: CMakeLists.txt  event.cpp  observable_value.cpp
tests/cmake/: get_catch2.cmake
